--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".ui.other.WidgetCreatorView" />
 
         <receiver
             android:name=".ui.home.HomeWidget"
