--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
     <uses-feature android:name="android.hardware.camera" />
@@ -62,6 +63,11 @@
             android:screenOrientation="portrait"/>
 
         <activity
+            android:name=".ui.other.WallpaperSetterActivity"
+            android:label="Set Wallpaper"
+            android:screenOrientation="portrait"/>
+
+        <activity
             android:name=".ui.home.ConfigurationWidgetActivity"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -76,17 +82,19 @@
             android:finishOnTaskLaunch = "true"/>
 
         <service
-            android:name=".background.TroubleshooterUpdateService"
+            android:name=".updateWidget.TroubleshooterUpdateService"
             android:enabled="true"/>
 
         <service
-            android:name=".background.SmallWeatherUpdateService"
+            android:name=".updateWidget.SmallWeatherUpdateService"
             android:enabled="true"/>
 
         <receiver
             android:name=".ui.home.WidgetTroubleshooter"
             android:icon="@drawable/logo_cyberpunk"
-            android:label="Troubleshooter">
+            android:label="Troubleshooter"
+            android:widgetCategory="home_screen|keyguard"
+            android:resizeMode="horizontal|vertical">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -99,7 +107,9 @@
         <receiver
             android:name=".ui.home.WidgetSmallWeather"
             android:icon="@drawable/logo_cyberpunk"
-            android:label="WeatherSmall">
+            android:label="WeatherSmall"
+            android:widgetCategory="home_screen|keyguard"
+            android:resizeMode="horizontal|vertical">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -109,7 +119,7 @@
                 android:resource="@xml/widget_small_weather_metadata" />
         </receiver>
 
-        <receiver android:name=".background.UpdateReceiver">
+        <receiver android:name=".updateWidget.UpdateReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
